added color selection

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
 <button id="clear">Clear</button>
+<input id="color" type="text" placeholder="Color">
+<button id="changeColor">Change</button>
 <div id="canvasDiv"></div>
 
 </body>
